--- a/AgroVision.ipynb
+++ b/AgroVision.ipynb
@@ -231,9 +231,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[1m129/129\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m88s\u001b[0m 669ms/step - accuracy: 0.9939 - loss: 0.6086\n",
+            "Validation Accuracy (Best Model): 99.39%\n"
+          ]
+        }
+      ],
       "source": [
         "# Evaluate best model\n",
         "best_model = load_model(\"best_agrovision_model.keras\")\n",
@@ -243,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -252,7 +261,7 @@
           "text": [
             "Found 4122 images belonging to 15 classes.\n",
             "Predicting...\n",
-            "\u001b[1m129/129\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m53s\u001b[0m 400ms/step\n"
+            "\u001b[1m129/129\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m48s\u001b[0m 367ms/step\n"
           ]
         },
         {
@@ -342,7 +351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -355,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
